name:                boxes
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/arthurvard/boxes#readme
license:             BSD3
license-file:        LICENSE
author:              Arthur Vardanyan
maintainer:          arthur@datasfer.com
copyright:           2018 Arthur Vardanyan
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  Readme.org
library
  hs-source-dirs:   lib
  ghc-options:    -Wall
  default-language: Haskell2010
  default-extensions:  OverloadedStrings
  exposed-modules:     Boxes
  build-depends:     base >= 4.7 && < 5


executable boxes
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -Wall
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , boxes

test-suite hspec-tests
    type:                exitcode-stdio-1.0
    hs-source-dirs:      test
    main-is:             Spec.hs
    Other-Modules:       BoxesSpec
    build-depends:       base >= 4.7 && < 5
                       , hspec
                       , boxes
                       , QuickCheck
